CTA bar adjustments for mobile, fix stories & video bottom margin on mobile

--- a/web/themes/custom/citizen_dart/components/03-composites/paragraphs/stories-video-list/_stories-video-list.scss
+++ b/web/themes/custom/citizen_dart/components/03-composites/paragraphs/stories-video-list/_stories-video-list.scss
@@ -8,9 +8,6 @@
 .paragraph--type--stories-video-list{
   max-width: 1320px;
   @include auto;
-  & > *:last-child{
-    margin-bottom: -$spaceMd;
-  }
 	.views-wrapper{
     &.views-both{
       .widget-section > .layout--onecol &,.node-support-book &,.block-field-stories-video-list &{
